# jp-qcew

./: .gitignore  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
notebook/: data.qmd  dev.qmd  polars.qmd  test.qmd
notebooks/: data.ipynb  data.qmd  db.qmd  dev.qmd  duckdb.qmd  geo.qmd  pandas.qmd  polars.qmd  scratch.ipynb  test.ipynb  test.qmd
src/: models.py  schema.sql
src/dao/: hac_table.py  qcew_raw.py  qcew_table_raw.py
src/data/: data_process.py
src/jp_qcew/: __init__.py  data_process.py
src/sql/: init_hac_table.sql  init_qcew_table.sql  models.py
src/visualization/: data_viz.py  graph.py  test.py
