[project]
name = "jp-qcew"
version = "2.2.0"
authors = [{ name = "Alejandro Ousland", email = "alejandro.ouslan@upr.edu" }]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "altair[all]>=5.5.0",
  "duckdb>=1.1.3",
  "fastexcel>=0.12.1",
  "geopandas>=1.0.1",
  "pandas>=2.2.3",
  "polars>=1.34.0",
  "pyarrow>=17.0.0",
  "requests>=2.32.3",
  "tqdm>=4.67.1",
  "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
  "cairosvg>=2.8.2",
  "jupyter>=1.1.1",
  "jupytext>=1.18.1",
  "kaleido>=1.1.0",
  "matplotlib>=3.10.0",
  "pnglatex>=1.1",
  "pre-commit>=4.3.0",
  "pynvim>=0.5.2",
  "pyperclip>=1.11.0",
  "ruff>=0.14.3",
  "visidata>=3.3",
]
