[project]
name = "jp-qcew"
version = "2.2.0"
description = "A python tool to process the Censored QCEW for PR"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.2",
    "jp-tools>=0.3.1",
    "polars>=1.35.2",
]

[project.scripts]
jp-qcew = "jp_qcew:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]
